# eve-virtual-assistant

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
